--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ rand = "0.8.5"
 fxhash = "0.2.1"
 t1ha = "0.1.2"
 wyhash = "0.5.0"
+xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
+metrohash = "1.0.6"
+seahash = "4.1.0"
