--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ default = ["std"]
 std = []
 
 [dependencies]
+serde = { version = "1.0.210", features = ["derive"] }
 
 [dev-dependencies]
 criterion = "0.5.1"
