--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -18,7 +18,7 @@ jobs:
     - name: Rust dependency cache
       uses: Swatinem/rust-cache@v2
     - name: Compile and run tests
-      run: cargo test --no-fail-fast
+      run: cargo test --no-fail-fast --all-features
 
   test-no-std:
     name: "Test (no_std)"
