--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ default = ["std"]
 std = []  # enable std library for RapidHashMap and RapidHashSet helpers
 rand = ["dep:rand"]  # enable the rand library for random seed initialisation
 unsafe = []  # enable unsafe pointer arithmetic to skip unnecessary bounds checks
+_no_doc = []  # internal: hack for docs_auto_config without breaking --all-features tests on stable
 
 [dependencies]
 rand = { version = "0.8.5", default-features = false, optional = true }
