--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,17 @@ exclude = ["Cargo.lock", ".github"]
 name = "bench"
 harness = false
 
+# Test docs using cargo-docs. Command:
+# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly docs -- --all-feature
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
 [features]
 default = ["std"]
 std = []  # enable std library for RapidHashMap and RapidHashSet helpers
 rand = ["dep:rand"]  # enable the rand library for random seed initialisation
 unsafe = []  # enable unsafe pointer arithmetic to skip unnecessary bounds checks
-_no_doc = []  # internal: hack for docs_auto_config without breaking --all-features tests on stable
 
 [dependencies]
 rand = { version = "0.8.5", default-features = false, optional = true }
