Make rapidhash implementation const

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,9 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-default = ["std"]
+default = ["std", "rand", "rng", "time"]
 std = []  # enable std library for RapidHashMap and RapidHashSet helpers
-rand = ["dep:rand", "std"]  # enable the rand library for random seed initialisation
+rand = ["dep:rand", "std"]  # enable the rand library for random seed initialisation and RapidRandomState
 rng = ["dep:rand_core"]  # fast random number generator using rapidhash
 time = ["std"]  # enable rng seeding using system time
 unsafe = []  # enable unsafe pointer arithmetic to skip unnecessary bounds checks
