--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,10 +47,15 @@ xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
 metrohash = "1.0.6"
 seahash = "4.1.0"
 ahash = "0.8.11"
-gxhash = "3.4.1"
 fastrand = "2.1.1"
 
 # for the charts example to generate README plots
 plotters = { version = "0.3.7", default-features = false, features = ["chrono", "image", "svg_backend", "bitmap_backend", "bitmap_encoder", "line_series"] }
 serde = "1.0.210"
 serde_cbor = "0.11.2"
+
+# gxhash simply won't compile on Github Actions, even though I only use it for the benchmarks...
+[target.'cfg(all(any(target_arch = "arm", target_arch = "aarch64"), all(target_feature = "aes", target_feature = "neon")))'.dev-dependencies]
+gxhash = "3.4.1"
+[target.'cfg(all(any(target_arch = "x86", target_arch = "x86_64"), all(target_feature = "aes", target_feature = "sse2")))'.dev-dependencies]
+gxhash = "3.4.1"
