--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,10 @@ exclude = ["Cargo.lock", ".github", "fuzz"]
 name = "bench"
 harness = false
 
+[[bench]]
+name = "quality"
+harness = false
+
 # Test docs using cargo-docs. Command:
 # RUSTDOCFLAGS="--cfg docsrs" cargo +nightly docs -- --all-feature
 [package.metadata.docs.rs]
@@ -52,6 +56,7 @@ rand = "0.8.5"
 const-random = "0.1.18"
 lazy_static = "1.5.0"
 reqwest = { version = "0.12.7", features = ["blocking"] }
+itertools = "0.13.0"
 
 # for the charts example to generate README plots
 plotters = { version = "0.3.7", default-features = false, features = ["chrono", "image", "svg_backend", "bitmap_backend", "bitmap_encoder", "line_series"] }
