--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rapidhash"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.77.0"
 authors = ["Liam Gray <gmail@liamg.me>"]
 description = "A rust port of rapidhash: an extremely fast, high quality, platform-independent hashing algorithm."
 repository = "https://github.com/hoxxep/rapidhash"
