--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ description = "A rust port of rapidhash: an extremely fast, high quality, platfo
 repository = "https://github.com/hoxxep/rapidhash"
 documentation = "https://docs.rs/rapidhash"
 license = "MIT OR Apache-2.0"
-license-file = "LICENSE-MIT"
 readme = "README.md"
 keywords = ["hash", "rapidhash"]
 categories = ["algorithms", "no-std"]
@@ -70,3 +69,15 @@ serde_cbor = "0.11.2"
 gxhash = "3.4.1"
 [target.'cfg(all(any(target_arch = "x86", target_arch = "x86_64"), all(target_feature = "aes", target_feature = "sse2")))'.dev-dependencies]
 gxhash = "3.4.1"
+
+[profile.bench]
+lto = "fat"
+codegen-units = 1
+opt-level = 3
+debug = false
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
+opt-level = 3
+debug = false
