--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,9 @@ twox-hash = "1.6.3"
 metrohash = "1.0.6"
 seahash = "4.1.0"
 ahash = "0.8.11"
-fastrand = "2.1.1"
+farmhash = "1.1.5"
+highway = "1.2.0"
+rustc-hash = "2.0.0"
 
 # benchmarking helpers
 criterion = { version = "0.5.1", default-features = false, features = ["rayon", "cargo_bench_support"] }
